k8s-resources/authentication-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-service
spec:
  selector:
      matchLabels:
        app: authentication-service
  replicas: 1
  template:
    metadata:
      labels:
        app: authentication-service
    spec:
      containers:
        - name: authentication-service
          image: authentication-service:0.0.1
          ports:
            - containerPort: 8080
