k8s-resources/main-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: main-service
spec:
  selector:
    app: main-service
  ports:
  - protocol: TCP
    port: 8080
