k8s-resources/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - secretName: testsecret
  rules:
    - http:
        paths:
          - path: /oauth
            backend:
              serviceName: authentication-service
              servicePort: 8080
          - path: /login
            backend:
              serviceName: authentication-service
              servicePort: 8080
          - path: /
            backend:
              serviceName: main-service
              servicePort: 8080
      host: minikube.com
